# CGProject

./: CGProject.cpp  CMakeLists.txt  Utility.cpp  Utility.h
Report/: Abstract.docx  Content.docx  CoverPage.docx  References.docx
Report/References/: FORMAT - CG Mini Project Cover Page n Certifiacte.docx  report 1.docx  report 2.docx
include/: Background.hpp  Foreground.hpp  Objects.hpp  Utility.hpp  aeroplane.hpp
src/: Background.cpp  CGProject.cpp  Foreground.cpp  Utility.cpp  aeroplane.cpp
